<resources>
    <string name="app_name">Dubbing</string>

    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="upload_dubbing_title">上传作品</string>
    <string name="upload_dubbing_last">上一步</string>
    <string name="upload_dubbing_confirm_upload">确认上传</string>
    <string name="upload_dubbing_name_edit">给作品起个名字吧~</string>
    <string name="upload_dubbing_content_edit">作品介绍（400字以内）</string>
    <string name="upload_dubbing_change_cover">更换封面</string>
    <string name="upload_dubbing_take_photo">拍一张</string>
    <string name="upload_dubbing_select_from_gallery">相册选图</string>
    <string name="upload_dubbing_select_from_video">选取视频片段</string>
    <string name="upload_dubbing_action_success">~ 作品上传成功 ~</string>
    <string name="upload_dubbing_review_dubbing">查看作品</string>
    <string name="upload_dubbing_share_to">分享作品到</string>
    <string name="upload_dubbing_share_to_wechat_friends">微信好友</string>
    <string name="upload_dubbing_share_to_wechat_moment">朋友圈</string>
    <string name="upload_dubbing_share_to_qq_friends">QQ好友</string>
    <string name="upload_dubbing_share_to_sina_weibo">新浪微博</string>
    <string name="upload_dubbing_share_to_qzone">QQ空间</string>
    <string name="choose_cover_from_video_hint">滑动可选择一张封面</string>
    <string name="dubbing_process_text_indicator">处理中...</string>
</resources>
