<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff1b1b1b"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:background="#ff282828">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="back"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/upload_dubbing_close"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/upload_dubbing_title"
            android:textColor="#ffbdbdbd"
            android:textSize="17sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="center"
                android:src="@drawable/bg_upload_dubbing_success"/>

            <TextView
                android:id="@+id/upload_dubbing_change_cover_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/upload_dubbing_action_success"
                android:textColor="#fff"
                android:textSize="17sp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/upload_dubbing_review_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/upload_dubbing_review_dubbing"
                android:textColor="#a33c3c"
                android:textSize="15sp"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="28dp"
                android:paddingRight="28dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#757575"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/upload_dubbing_share_to"
                    android:textColor="#757575"
                    android:textSize="13sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#757575"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/upload_dubbing_share_to_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_upload_dubbing_share_to_wechat"
                    android:gravity="center"
                    android:text="@string/upload_dubbing_share_to_wechat_friends"
                    android:textColor="#757575"
                    android:textSize="12sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/upload_dubbing_share_to_wechat_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_upload_dubbing_share_to_wechat_moment"
                    android:gravity="center"
                    android:text="@string/upload_dubbing_share_to_wechat_moment"
                    android:textColor="#757575"
                    android:textSize="12sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/upload_dubbing_share_to_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_upload_dubbing_share_to_qq"
                    android:gravity="center"
                    android:text="@string/upload_dubbing_share_to_qq_friends"
                    android:textColor="#757575"
                    android:textSize="12sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/upload_dubbing_share_to_sina_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_upload_dubbing_share_to_sina_weibo"
                    android:gravity="center"
                    android:text="@string/upload_dubbing_share_to_sina_weibo"
                    android:textColor="#757575"
                    android:textSize="12sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/upload_dubbing_share_to_qzone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_upload_dubbing_share_to_qzone"
                    android:gravity="center"
                    android:text="@string/upload_dubbing_share_to_qzone"
                    android:textColor="#757575"
                    android:textSize="12sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="3"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
